# src/main/kotlin/com/empik/couponManager/model/ErrorResponse.kt
@@ -1,0 +1,8 @@
+package com.empik.couponManager.model
+
+import java.time.Instant
+
+data class ErrorResponse(
+    val message: String?,
+    val timestamp: Instant = Instant.now(),
+)
